name:                 mdviewer
version:              0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/githubuser/markdown#readme
license:              BSD3
license-file:         LICENSE
author:               Author name here
maintainer:           example@example.com
copyright:            2017 Author name here
category:             Web
extra-source-files:   README.md
cabal-version:        >=1.10
build-type:           Custom

extra-source-files:   Paths.hs

executable mdviewer
  hs-source-dirs:     app, .
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N 
  other-modules:      Command
                      Convert
                      HtmlBuilder
                      List
                      Show
                      Types
                      Paths

  build-depends:      base
                    , cond
                    , text
                    , directory
                    , filepath
                    , argparser
                    , transformers
                    , containers
                    , gtk3
                    , glib
                    , webkitgtk3
                    , markdown
                    , blaze-html
                    , blaze-markup
                    , random

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/markdown
