name:                 mdviewer
version:              0.1.0.0
-- synopsis:
-- description:
homepage:             https://github.com/githubuser/markdown#readme
license:              GPL-3
license-file:         LICENSE
author:               Author name here
maintainer:           example@example.com
copyright:            2017 Author name here
category:             Web
extra-source-files:   README.md
cabal-version:        >=1.10
build-type:           Custom

extra-source-files:   Paths.hs

executable mdviewer
  hs-source-dirs:     app, .
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N 
  other-modules:      Command
                      Convert
                      HtmlBuilder
                      List
                      Show
                      Types
                      Paths

  build-depends:      base
                    , cond
                    , transformers
                    , containers
                    , deepseq
                    , text
                    , directory
                    , filepath
                    , argparser
                    , pandoc
                    , blaze-markup
                    , blaze-html
                    , webkitgtk3
                    , gtk3
                    , glib

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/markdown
