name:                 mdviewer
version:              0.1.0.0
synopsis:             mdviewer is a minimalistic GTK+ Markdown viewer/converter written in Haskell. 
description:          mdviewer is a minimalistic GTK+ Markdown viewer/converter written in Haskell. 
                      It supports using Css stylesheets both from a built-in styles repository or 
                      from user provided Css files. It is also possible to export files to Html 
                      embedding the selected style into a single self-contained file.
homepage:             https://github.com/agustinmista/mdviewer#readme
license:              GPL-3
license-file:         LICENSE
author:               Agustin Mista
maintainer:           mista.agustin@gmail.com
copyright:            2017 Agustin Mista
category:             Web
extra-source-files:   README.md
cabal-version:        >=1.10
build-type:           Custom

extra-source-files:   Paths.hs

executable mdviewer
  hs-source-dirs:     app, .
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N 
  other-modules:      Command
                      Convert
                      HtmlBuilder
                      List
                      Show
                      Types
                      Paths

  build-depends:      base
                    , cond
                    , transformers
                    , containers
                    , deepseq
                    , text
                    , directory
                    , filepath
                    , argparser
                    , pandoc
                    , blaze-markup
                    , blaze-html
                    , webkitgtk3
                    , gtk3
                    , glib

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agustinmista/mdviewer
